[project]
name = "humanman"
version = "0.1.0"
description = "A full biological human simulation module with cells, DNA, organs, digestion, and more."
authors = [{name = "Archie Boyd"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"